removing unnecessary spacing now that NLHC is no longer in claims widget.

--- a/src/sass/myservice-widgets.scss
+++ b/src/sass/myservice-widgets.scss
@@ -29,7 +29,11 @@
   margin-bottom: 1em;
   border: 1px solid $gray-mild;
   margin: 0 0 2em;
-  position: relative;
+	position: relative;
+	
+	p {
+		margin:auto;
+	}
 
   .widget-header {
     background-color: #ffffff;
@@ -110,9 +114,6 @@
 }
 
 @media only screen and (min-width: $medium-tablet) {
-  .widget {
-  }
-
   .widget-btn {
     margin: 0 0.5em 2em 2em;
   }
@@ -241,29 +242,17 @@
 
 @media only screen and (min-width: $large-handheld) {
   .widget {
-    min-height: 320px;
-
     .col-sm-4 {
       padding-top: 0;
     }
 
     .widget--noclaims {
-      // border: 1px solid #cccccc; //I can't see how this is needed. The default has this set already
-      padding: 2em 2em 8em; // no need for !important. Its specificity is at the right level now
+      padding: 2em 2em 2em;
    
     }
   }
 }
 
-@media only screen and (min-width: $medium-tablet) {
-  .widget {
-    .widget--noclaims {
-      // border: 1px solid #cccccc; //I can't see how this is needed. The default has this set already
-      padding: 2em 2em 4em; // no need for !important. Its specificity is at the right level now
-   
-    }
-  }
-}
 
 @media only screen and (min-width: $medium-handheld) {
   .widget-actions {
